@@ -1,6 +1,7 @@
 package com.kh.soundcast.config;
 
 import java.util.Collections;
+import java.util.List;
 
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
@@ -29,47 +30,50 @@ public class WebSecurityConfig {
 	
 	@Bean
 	public SecurityFilterChain filterChain(HttpSecurity http) throws Exception{
+	
 		
-		//
 		http.cors(corsConfig -> corsConfig.configurationSource(new CorsConfigurationSource() {
 			
 			@Override
 			public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
 				CorsConfiguration config = new CorsConfiguration();
-				config.setAllowedOrigins(Collections.singletonList("http://localhost:3000"));
+				//config.setAllowedOrigins(Collections.singletonList("http://localhost:3000/"));
+				config.setAllowedOrigins(List.of("http://localhost:3000", "http://localhost:3001"));
 				config.setAllowedMethods(Collections.singletonList("*"));
-				config.setAllowCredentials(true); // jwt사용시에만 이용가능
+				config.setAllowCredentials(true); //jwt가 반드시 있어야만 사용가능
 				config.setAllowedHeaders(Collections.singletonList("*"));
-				config.setMaxAge(3600L); // 캐싱시간 1시간
+				config.setMaxAge(3600L); //캐싱시간 3600초 (1시간)
 				
 				return config;
 			}
-		}))
+		}) )
 		.csrf((csrfConfig) -> csrfConfig.disable())
-		.sessionManagement(config -> 
+		.sessionManagement(config->
 			config.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-		)
-		.authorizeHttpRequests((authorizeRequest)-> authorizeRequest
-//				.requestMatchers("/auth/login/**").permitAll() // 누구나이용가능한 url
-//				.requestMatchers("/member/**").permitAll() // 누구나이용가능한 url
-//				.requestMatchers("/song/**").permitAll() // 누구나이용가능한 url
-				.requestMatchers("/**").permitAll() // 누구나이용가능한 url				
-				.requestMatchers("/**").hasRole("USER") // 그 외는 user권환이 필요
-				// .requestMatcher("/admin/**).hasRole("ADMIN") 관리자경우
+				)
+		.authorizeHttpRequests((authorizeRequest) -> authorizeRequest
+				.requestMatchers("/member/**").permitAll()  // 누구나 이용가능한 url
+				.requestMatchers("/auth/**").permitAll()
+				.requestMatchers("/song/**").permitAll()
+				.requestMatchers("/**").hasRole("USER") //그외는 user권한이 필요
+				//.requestMatcher("/admin/**").hasRole("ADMIN") authority테이블에 ROLE_ADMIN
 				.anyRequest().authenticated()
-		)
-		.addFilterBefore(new AuthFilter(jwtProvider), UsernamePasswordAuthenticationFilter.class );
+				)
+		.addFilterBefore(new AuthFilter(jwtProvider), UsernamePasswordAuthenticationFilter.class);
 		
 		return http.build();
 	}
 	
 	@Bean
-    public WebSecurityCustomizer webSecurityCustomizer(){
-    	return web -> web.ignoring()
-        	.requestMatchers(PathRequest
-            	.toStaticResources()
-                .atCommonLocations()
-                 )
-        	.requestMatchers("resource/**");
-     }
+	public WebSecurityCustomizer webSecurityCustomizer() {
+		return web -> web.ignoring()
+	        	.requestMatchers(PathRequest
+	            	.toStaticResources()
+	                .atCommonLocations()
+	                 )
+	        	.requestMatchers("resource/**");
+	}
+	
+	
+	
 }
